Hand Compilation using Mex to identify basic issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,7 @@
     "_*": "shellscript",
     "*rc": "ini",
     "alloc.h": "c"
-  }
+  },
+  "C_Cpp.errorSquiggles": "disabled",
+  "makefile.configureOnOpen": true
 }
